--- a/css/main.css
+++ b/css/main.css
@@ -1,22 +1,22 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500');
-
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500");
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
 
-body{
-	background-color: #2b2d42;
+body {
+  background-color: #2b2d42;
 }
-.col-lg-8, .col-sm-12, .col-xs-12{
-	padding-left: 0px;
-	padding-right: 0px;  
+
+.col-lg-8, .col-sm-12, .col-xs-12 {
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 .container {
-  padding-right: 0px;
   padding-left: 0px;
+  padding-right: 0px;
 }
 
 .row {
@@ -24,55 +24,57 @@ body{
   margin-right: 0px;
 }
 
-#containercolor{
-	background-color: #f2f2f2;
+#containercolor {
+  background-color: #f2f2f2;
 }
 
 /*PARAGRAPH CLASS FOR PAGE 2,3 & 5*/
-.page-2-p, .page-3-p, .page-5-p{
-  margin: 2rem 0 0 0;
+.page-2-p, .page-3-p, .page-5-p {
   font-family: "Roboto";
   font-weight: 300;
+  margin: 2rem 0 0 0;
   font-size: 1.2rem;
   text-align: center;
   padding: 0 1.5rem 0 1.5rem;
 }
 
-/*PAGE-1*/
-
 .page-1 {
- background-image: url("../img/stockholm-sweden-winter-blur-lower.jpg");
- height: 83rem;
- padding: 0 0;
+  background-image: url("../img/stockholm-sweden-winter-blur-lower.jpg");
+  height: 83rem;
+  padding: 0 0;
 }
-.page-1-div{
-	position: relative;
-	top:10rem;
-	width: 80%;
-	height: 80%;
- background-color: rgba(0,0,0,0.3);
- margin: 0 auto;
- margin-top: 0rem;
- border: 1px solid #b5b5b5;
+
+.page-1-opacity {
+  position: relative;
+  top: 10rem;
+  width: 80%;
+  height: 80%;
+  background-color: rgba(0, 0, 0, 0.3);
+  margin: 0 auto;
+  margin-top: 0rem;
+  border: 1px solid #b5b5b5;
 }
-.page-1-title-h1 {
-  color: white;
+
+.page-1-header {
   font-family: "Roboto";
   font-weight: 300;
+  color: white;
   font-size: 2em;
   text-align: center;
   margin-top: 7rem;
 }
+
 .orange-line {
   width: 6rem;
   height: 0.2rem;
   background-color: #f26522;
   margin: 5rem auto;
 }
+
 .btn-page-1 {
   padding: 6px 12px;
   border: 2px solid #b5b5b5;
-  background-color: rgba(0,0,0,0.0);
+  background-color: transparent;
   font-size: 1em;
   width: 11rem;
   margin: 2rem auto;
@@ -81,7 +83,6 @@ body{
 }
 
 /*PAGE-2*/
-
 .page-2 {
   background-color: #ffffff;
   height: 83rem;
@@ -89,20 +90,19 @@ body{
 }
 
 .page-h1-black {
-  color: black;
   font-family: "Roboto";
   font-weight: 300;
+  color: black;
   font-size: 2em;
   padding: 4rem 0.3em 0 0.3em;
   margin-top: 4rem;
   text-align: center;
 }
 
-
 .btn-page-2 {
   padding: 6px 12px;
   border: 2px solid #b5b5b5;
-  background-color: rgba(0,0,0,0.0);
+  background-color: transparent;
   font-size: 1em;
   width: 11rem;
   margin: 2rem auto;
@@ -112,44 +112,60 @@ body{
 }
 
 .btn-black {
-  color:black !important;
+  color: black !important;
   text-decoration: none;
 }
 
 /*PAGE-3*/
-
-.page-3{
+.page-3 {
   background-color: #f2f2f2;
   height: 83rem;
   padding: 0 0;
 }
 
 .projectImg {
-width: 100%;
-max-width: 670px;
-max-height: 480px;
-margin: 0 auto;
-left: 50%;
+  width: 100%;
+  margin: 0 auto;
+  max-width: 670px;
+  max-height: 480px;
+  left: 50%;
 }
-.img-responsive{
+
+.img-responsive {
   margin: 0 auto;
 }
 
-.responsiveImg{
-width: 100%;
-max-width: 544px;
-max-height: 273px;
-margin: 0 auto;
-left: 50%;
+.responsiveImg {
+  width: 100%;
+  margin: 0 auto;
+  max-width: 544px;
+  max-height: 273px;
+  left: 50%;
 }
 
-
 /*PAGE-4*/
-
-.page-4{
+.page-4 {
   background-color: #fafafa;
   height: 83rem;
   padding: 0 0;
+}
+
+.p-div {
+  width: 80%;
+  height: 70%;
+  background-color: rgba(0, 0, 0, 0.3);
+  margin: 0 auto;
+  margin-top: 2rem;
+}
+
+.page-p-white {
+  font-family: "Roboto";
+  font-weight: 300;
+  margin: 2rem 0 0 0;
+  font-size: 2rem;
+  text-align: center;
+  padding: 0 1.5rem 0 1.5rem;
+  color: white;
 }
 
 .teamPic {
@@ -160,40 +176,41 @@ left: 50%;
   left: 50%;
 }
 
-
-
 /*PAGE-5*/
-.page-5{
+.page-5 {
   background-color: #f2f2f2;
   height: 83rem;
   padding: 0 0;
 }
-form{
+
+form {
   margin-top: 2rem;
 }
 
-.page-p-black{
-  margin: 2rem 0 0 0;
+.page-p-black {
   font-family: "Roboto";
   font-weight: 300;
+  margin: 2rem 0 0 0;
   font-size: 2.5rem;
   text-align: center;
   padding: 0 1.5rem 0 1.5rem;
 }
 
-.form-control{
+.form-control {
   max-width: 100%;
   max-height: 200px;
 }
-.btn-orange{
-padding: 6px 15px;
-border: 2px solid #000000;
-background-color: #f26522;
-margin: 1rem 0 0 0;
-color: white;
-text-decoration: none;
-font-family: "Roboto";
-font-weight: 300;
-float:right;
+
+.btn-orange {
+  padding: 6px 15px;
+  border: 2px solid #000000;
+  background-color: #f26522;
+  margin: 1rem 0 0 0;
+  color: white;
+  text-decoration: none;
+  font-family: "Roboto";
+  font-weight: 300;
+  float: right;
 }
 
+/*# sourceMappingURL=main.css.map */
