--- a/views/projekt.html
+++ b/views/projekt.html
@@ -31,36 +31,35 @@
          <a href="../index.html">  <img id="logoMenu" src="../img/xlnt-logo-official-new.png"></a>
        </div>
 
-       <div class="collapse navbar-collapse js-navbar-collapse">
-        <li class="liBoot"><a href="#hemScroll">Hem</a></li>
-        <li class="liBoot"><a href="#responsivScroll">Responsiv design</a></li>
-        <li class="liBoot"><a href="#tidigareScroll">Tidigare projekt</a></li>
-        <li class="liBoot"><a href="#teamScroll">Vårat team</a></li>
-        <li class="liBoot"><a href="#kontaktScroll">Kontakta oss</a></li>
-        <ul class="dropdown-menu mega-dropdown-menu">		
-        </div><!-- /.nav-collapse -->
-      </div> <!--container-fluid -->
+				<div class="collapse navbar-collapse js-navbar-collapse">
+					<li class="liBoot"><a href="../index.html#hemScroll">Hem</a></li>
+					<li class="liBoot"><a href="../index.html#responsivScroll">Responsiv design</a></li>
+					<li class="liBoot"><a href="../index.html#tidigareScroll">Tidigare projekt</a></li>
+					<li class="liBoot"><a href="../index.html#teamScroll">Vårat team</a></li>
+					<li class="liBoot"><a href="../index.html#kontaktScroll">Kontakta oss</a></li>
+					<ul class="dropdown-menu mega-dropdown-menu">		
+					</div><!-- /.nav-collapse -->
+				</div> <!--container-fluid -->
 
       <section><!-- the content -->
       <h1 class="page-h1-black text-center">Projekt vi har jobbat på!</h1>
       <div class="orange-line"></div>
-      <div class="row">
+      <div class="row"><!-- first row img -->
           <figure class="col-lg-5 col-sm-6 col-xs-12"><img class="img-responsive" src="../img/youtube.png" alt="Party!"><h1 class="page-h1-black">Youtube</h1><p class="project-p">"Quickest team we at Youtube ever worked with!"</p></figure>
            <div class="col-lg-2"></div>
           <figure class="col-lg-5 col-sm-6 col-xs-12"><img class="img-responsive" src="../img/plantify.png" alt="Party!"><h1 class="page-h1-black">Plantify</h1><p class="project-p">"Great understanding with our plant friendly thoughts"</p></figure>
            </div>
             
-        <div class="row">
+        <div class="row"><!-- second row img -->
             <figure class="col-lg-5 col-sm-5 col-xs-12"><img class="img-responsive" src="../img/blind.png" alt="Party!"><h1 class="page-h1-black">Synskadades Riksförbund</h1><p class="project-p">"Could really see the difference between mobile responsive and desktop"</p></figure>
               <div class="col-lg-2"></div>
             <figure class="col-lg-5 col-sm-5 col-xs-12"><img class="img-responsive" src="../img/twitch.png" alt="Party!"><h1 class="page-h1-black">Twitch</h1><p class="project-p">"Great and simple design for your user experience"</p></figure>
               </div>
                      
-
       <p class="page-p-black">Vill du bli lika nöjd som våra tidigare kunder?</p>
         <div class="row">
            <div class="col-lg-8 col-lg-offset-2 col-sm-12 col-xs-12">
-      <a href="views/team.html" class="btn-page-2 btn-black btn-projekt btn-group-justified">Läs mer!</a>
+      <a href="../index.html#kontakt" class="btn-page-2 btn-black btn-projekt btn-group-justified">Kontakta oss!</a>
           </div>
         </div>
 
