--- a/views/responsive.html
+++ b/views/responsive.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Boot</title>
+    <link href="../css/footer.css" rel="stylesheet">
     <link href="../css/main.css" rel="stylesheet">
     <link href="../css/responsive.css" rel="stylesheet">
     <link href="../bootstrap-3.3.7-dist/css/bootstrap.css" rel="stylesheet">
@@ -27,7 +28,7 @@
            <span class="icon-bar"></span>
            <span class="icon-bar"></span>
          </button>
-         <img id="logoMenu" src="../img/xlnt-logo-official-new.png">
+         <a href="../index.html">  <img id="logoMenu" src="../img/xlnt-logo-official-new.png"></a>
        </div>
 
        <div class="collapse navbar-collapse js-navbar-collapse">
@@ -80,9 +81,10 @@
 
 
     </div> <!-- container col-lg-8 col-sm-12 col-xs-12 -->
-    <aside class="col-lg-2"></aside>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="../bootstrap-3.3.7-dist/js/bootstrap.js"></script>
-    <script src="../navjs.js"></script>
-  </body>
+<aside class="col-lg-2"></aside> 
+<script src="https://use.fontawesome.com/656255a524.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="../bootstrap-3.3.7-dist/js/bootstrap.js"></script>
+<script src="../navjs.js"></script>
+</body>
 </html>
