--- a/views/projekt.html
+++ b/views/projekt.html
@@ -28,7 +28,7 @@
            <span class="icon-bar"></span>
            <span class="icon-bar"></span>
          </button>
-         <a href="../index.html">  <img id="logoMenu" src="../img/xlnt-logo-official-new.png"></a>
+         <a href="../index.html">  <img id="logoMenu" alt="xlntLogo" src="../img/xlnt-logo-official-new.png"></a>
        </div>
 
 				<div class="collapse navbar-collapse js-navbar-collapse">
@@ -40,7 +40,7 @@
 					<ul class="dropdown-menu mega-dropdown-menu">		
 					</div><!-- /.nav-collapse -->
 				</div> <!--container-fluid -->
-
+      </nav>
       <section><!-- the content -->
       <h1 class="page-h1-black text-center">Projekt vi har jobbat på!</h1>
       <div class="orange-line"></div>
