--- a/views/responsive.html
+++ b/views/responsive.html
@@ -28,7 +28,7 @@
            <span class="icon-bar"></span>
            <span class="icon-bar"></span>
          </button>
-         <a href="../index.html">  <img id="logoMenu" src="../img/xlnt-logo-official-new.png"></a>
+         <a href="../index.html">  <img id="logoMenu" alt="xlntLogo" src="../img/xlnt-logo-official-new.png"></a>
        </div>
 
 				<div class="collapse navbar-collapse js-navbar-collapse">
